<resources>
    <string name="app_name">PARAGON</string>
    <string name="name">Name : </string>
    <string name="customer_id">Customer Id : </string>
    <string name="email_id">Email Address : </string>
    <string name="phoneNo">Phone No. : </string>
    <string name="address">Address : </string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="address3">Address 3</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="company_name">Company Name</string>
    <string name="city">City or Town : </string>
    <string name="state">State/Province : </string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country/Territory : </string>
    <string name="fax">Fax Number</string>
    <string name="licence_plate">Enter Number Plate Number</string>
    <string name="memid"> Membership Id</string>
    <string name="service_type">Select Service Type</string>
    <string name="vin">Vehicle Identification Number</string>
    <string name="vehicle_milage">Vehicle Mileage</string>
    <string name="vehicle_type">Type of Vehicle</string>
    <string name="vehicle_ReqType">Tell Regarding your Request</string>
    <string name="vehicle_ComId">Vehicle Company Id</string>
    <string name="vehicle_Make">Vehicle Make</string>
    <string name="vehicle_Model">Vehicle Model (eg. Cruze)</string>
    <string name="vehicle_Year">Vehicle Manufactured Year</string>
    <string name="phone_no">Phone Number</string>
    <string name="odometer_reading">Current Odometer Reading (in miles)</string>
    <string name="not_for_you">Not For You</string>
    <string name="email">Email</string>
    <string name="noNotification"> No Notification for you</string>
    <string name="password">Password</string>
    <string name="forgetPass">Forgotten Password ?</string>
    <string name="login_button">Log In</string>
    <string name="terms_conditions">By signing in, you agree with our </string>
    <string name="terms_conditions_color"> &#160;Terms and Conditions</string>
    <string name="raise_request">RAISE REQUEST</string>
    <string name="date">15 Oct,2016 12:30 PM</string>
    <string name="notification">NOTIFICATIONS</string>
    <string name="profile">PROFILE</string>
    <string name="Vehicle_Licence_Plate">Licence Plate</string>
    <string name="Vehicle_Request_Type">Request Type</string>
    <string name="Vehicle_Id">Vehicle Id</string>
    <string name="Vehicle_Type">Vehicle Type</string>
    <string name="search_button">Search</string>
    <string name="dialogText">Enter your email to reset your password.You will get a recovery link on your registered email</string>
    <string name="toolbarBack">Back</string>
    <string name="submit">SUBMIT</string>
    <string name="submitting_request_text">Problem Submitting Request?</string>
    <string name="dial">Dial</string>
    <string name="dial_no">&#160;&#160;1800 243 394</string>
    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Okay</string>
    <string name="signin">SignIn</string>
    <string name="cancel">Cancel</string>
    <string name="Audi">Audi</string>
    <string name="string_title_upload_progressbar_">Wait for a while...</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="enterRegistrationNumber">Please Enter Registeration Number</string>
    <string name="enterVehicleMilage">Please Enter Vehicle Mileage</string>
    <string name="enterVehicleType">Please Enter Type of Vehicle</string>
    <string name="enterVehicleRequestType">Please Tell Regarding your Request</string>
    <string name="enterBrandName">Please Enter Brand Name</string>
    <string name="selectVehicle">Select a Vehicle</string>
    <string name="enterVehicleModel">Please Enter Vehicle Model</string>
    <string name="enterVehicleYear">Please Enter Vehicle Manufactured Year</string>
    <string name="enterPhoneNumber">Please Enter Phone Number</string>
    <string name="selectVehicleCompany">Please Select Vehicle Company</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="yesButton">YES</string>
    <string name="logoutText">Are you sure you want to logout &#63;</string>
    <string name="membership_of_vehicle">Is this service for your vehicle- Yes or someone listed on your membership-no</string>
    <string name="safe_location_text">Are you in a safe location &#63;</string>
    <string name="safty_text">If you feel your safety is at risk, please move your person(s) to a
        safe location or call 911</string>
    <string name="setting">Settings</string>
    <string name="noButton">NO</string>
    <string name="changePassword">Change Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="enable_push">Enable Push</string>
    <string name="registered_vehicle">Registered Vehicle</string>
    <string name="selection_text">Select from below mention list</string>
    <string name="registration_no">NYF 653 </string>
    <string name="enter_registration_no">Enter Registration Number</string>
    <string name="cancel_button">CANCEL</string>
    <string name="processing_image">Processing image</string>
    <string name="brand_name">Brand Name</string>
    <string name="enterMembershipId">Enter Membership Id</string>
    <string name="enterVehicleIdNumber">Enter Vehicle Identification Number</string>
    <string name="any_special_needs_or_requests">Any special needs or requests?</string>

    <string-array name="media_options">
        <item name="gallery">Choose From Gallery</item>
        <item name="camera">Take Photo</item>
        <item name="cancel">Cancel</item>
    </string-array>
    <string-array name="request_options">
        <item name="gallery">Edit Request</item>
        <item name="camera">Complete Request</item>
        <item name="cancel">Cancel</item>
    </string-array>
</resources>
