<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etLicence"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorAccent"
            android:focusableInTouchMode="false"
            android:hint="@string/licence_plate"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="16sp"/>


        <EditText
            android:id="@+id/etMemid"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/memid"
            android:inputType="number"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@drawable/color_cursor"/>


        <EditText
            android:id="@+id/etIdNo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/vin"
            android:inputType="number"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@drawable/color_cursor"/>


        <EditText
            android:id="@+id/tvServiceType"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorAccent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/service_type"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@drawable/color_cursor"/>


        <EditText
            android:id="@+id/etMileage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/vehicle_milage"
            android:inputType="number"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@drawable/color_cursor"/>


        <EditText
            android:id="@+id/etVehicleType"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorAccent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/vehicle_type"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hintColor"/>


        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/any_special_needs_or_requests"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@drawable/color_cursor"/>


        <EditText
            android:id="@+id/etBrandName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorAccent"
            android:focusableInTouchMode="false"
            android:hint="@string/brand_name"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hintColor"/>




        <EditText
            android:id="@+id/etVehicleModel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/vehicle_Model"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@drawable/color_cursor">

        </EditText>

        <EditText
            android:id="@+id/tvVehicleYear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorAccent"
            android:focusableInTouchMode="false"
            android:hint="@string/vehicle_Year"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hintColor"/>


        <EditText
            android:id="@+id/etPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/phone_no"
            android:inputType="phone"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@drawable/color_cursor"/>


        <EditText
            android:id="@+id/tvOdometerReading"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/odometer_reading"
            android:inputType="phone"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@drawable/color_cursor"/>


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/mybutton"
            android:text="@string/submit"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/submitting_request_text"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/tvContactInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="8dp"
            android:text="@string/dial_no"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorPrimary"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

