<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/dialogToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgetPass"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogToolbar"
        android:gravity="center"
        android:padding="@dimen/twenty"
        android:text="@string/dialogText"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorAccent" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_marginEnd="@dimen/twenty"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:singleLine="true"
        android:background="@drawable/submitbutton"
        android:hint="@string/email"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/colorAccent"
        android:inputType="textEmailAddress"
        android:padding="@dimen/Twelve" />


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_margin="@dimen/twenty"
        android:background="@drawable/mybutton"
        android:text="@string/submit"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@android:color/white" />
</RelativeLayout>
