<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGrayBg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tbChangePass"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorGray">

        <TextView
            android:id="@+id/tbChangePassTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/changePassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.Toolbar>

    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
        android:id="@+id/etOldPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:layout_alignStart="@+id/etNewPass"
        android:layout_below="@+id/tbChangePass"
        android:layout_marginEnd="@dimen/twenty"
        android:layout_marginTop="16dp"
        android:background="@drawable/submitbutton"
        android:hint="@string/oldPassword"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/colorAccent"
        android:inputType="textPassword"
        android:padding="@dimen/Twelve"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:drawable_hide="@drawable/ic_visibility_off_black_24dp"
        app:drawable_show="@drawable/ic_visibility_black_24dp"
        app:tint_color="@color/colorAccent" />

    <Button
        android:id="@+id/btnChange"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:layout_below="@+id/etNewPass"
        android:layout_marginBottom="@dimen/twenty"
        android:layout_marginEnd="@dimen/twenty"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/mybutton"
        android:text="@string/submit"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@android:color/white" />

    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText

        android:id="@+id/etNewPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="@dimen/twenty"
        android:background="@drawable/submitbutton"
        android:hint="@string/newPassword"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/colorAccent"
        android:inputType="textPassword"
        android:padding="@dimen/Twelve"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:drawable_hide="@drawable/ic_visibility_off_black_24dp"
        app:drawable_show="@drawable/ic_visibility_black_24dp"
        app:tint_color="@color/colorAccent"
        android:layout_below="@+id/etOldPass"
        android:layout_alignStart="@+id/btnChange" />


</RelativeLayout>
