<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGrayBg">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarLogout"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/twenty"
        android:gravity="center"
        android:text="@string/membership_of_vehicle"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorAccent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarLogout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/toolbarLogoutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Membership of Vehicle"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_below="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/yesButton"
            android:layout_marginEnd="4dp"
            android:background="@drawable/button_yes"
            android:textColor="@android:color/white"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_height="@dimen/editTextHeight" />
        <Button
            style="?attr/buttonBarButtonStyle"
            android:id="@+id/btnCancle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/noButton"
            android:layout_marginStart="4dp"
            android:background="@drawable/no_button"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorAccent"
            android:layout_height="@dimen/editTextHeight" />

    </LinearLayout>
</RelativeLayout>
